trunk/Archive2/1a/a244b6f011efb1/output
main.cpp: In function 'int main()':
main.cpp:8:10: error: two or more data types in declaration of 't1'
     auto t1 = std::make_tuple(10, "Test", 42);
          ^
main.cpp:8:15: error: 'make_tuple' is not a member of 'std'
     auto t1 = std::make_tuple(10, "Test", 42);
               ^
main.cpp:10:33: error: 't1' was not declared in this scope
     std::cout << std::get<ID_B>(t1) << "(" << std::get<ID_A>(c) << ", " << std::get<ID_C>(c) << ")" << std::endl;
                                 ^
main.cpp:10:62: error: 'c' was not declared in this scope
     std::cout << std::get<ID_B>(t1) << "(" << std::get<ID_A>(c) << ", " << std::get<ID_C>(c) << ")" << std::endl;
                                                              ^
